@@ -388,7 +388,6 @@ ifeq ($(LIBPMEMCORE), internal-nondebug)
 OBJS +=\
 	$(TOP)/src/nondebug/core/alloc.o\
 	$(TOP)/src/nondebug/core/fs_posix.o\
-	$(TOP)/src/nondebug/core/membuf.o\
 	$(TOP)/src/nondebug/core/os_posix.o\
 	$(TOP)/src/nondebug/core/os_thread_posix.o\
 	$(TOP)/src/nondebug/core/out.o\
@@ -404,7 +403,6 @@ ifeq ($(LIBPMEMCORE), internal-debug)
 OBJS +=\
 	$(TOP)/src/debug/core/alloc.o\
 	$(TOP)/src/debug/core/fs_posix.o\
-	$(TOP)/src/debug/core/membuf.o\
 	$(TOP)/src/debug/core/os_posix.o\
 	$(TOP)/src/debug/core/os_thread_posix.o\
 	$(TOP)/src/debug/core/out.o\
